--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <span class="loading loading-bars loading-xl"></span>
   </section>
   <!-- kicu na thakle dekhabe  -->
-  <section id="word-container" class="bg-gray-100 p-10 max-w-[1250px] mx-auto my-5 grid gap-5 grid-cols-3">
+  <section id="word-container" class="bg-gray-100 p-10 max-w-[1250px] sm:grid-cols-1 mx-auto my-5 grid gap-5 md:grid-cols-3">
     <div class="bg-[#DFF2Fd] col-span-full py-7 text-center rounded-lg font-bangla">
       <p class="text-xl pb-6 text-[#79716B]">আপনি এখনো কোন Lesson Select করেন ন</p>
       <h4 class="text-4xl font-bold">একটি Lesson Select করুন।</h4>
